[gd_scene load_steps=7 format=3 uid="uid://cu648fe6v2d05"]

[ext_resource type="Script" uid="uid://c4nlwhp3v1t1y" path="res://Cenas/esfinge_falando___copia_(3).gd" id="1_1g4me"]
[ext_resource type="AudioStream" uid="uid://1s372kwn2r1l" path="res://Assets Cle├│patra/Cen├írios/monster-footstep-162883.mp3" id="1_ynijy"]
[ext_resource type="Texture2D" uid="uid://cm4ndjtoqtbx" path="res://Assets Cle├│patra/Cleopatra falando/pós-vidro 3.png" id="3_51vhp"]
[ext_resource type="Texture2D" uid="uid://d0tskijruvrjd" path="res://Assets Cle├│patra/Cleopatra falando/pós-vidro 2.png" id="4_dow4h"]
[ext_resource type="Texture2D" uid="uid://b23pod5oagtlw" path="res://Assets Cle├│patra/Cleopatra falando/pós-vidro.png" id="5_nw86o"]
[ext_resource type="VideoStream" uid="uid://b5vx62p3r8pe3" path="res://Assets Cle├│patra/Cen├írios/Assets para enfeites/VideoBola.ogv" id="6_k2km7"]

[node name="EsfingeFalando" type="CanvasLayer"]
script = ExtResource("1_1g4me")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(573.5, 324.75)
scale = Vector2(2.3225155, 1.7110817)
stream = ExtResource("1_ynijy")
volume_db = 24.0

[node name="Cena3" type="Sprite2D" parent="."]
position = Vector2(575.5, 326.25)
scale = Vector2(1.3025923, 0.9584361)
texture = ExtResource("3_51vhp")

[node name="Cena2" type="Sprite2D" parent="."]
position = Vector2(572, 323.25)
scale = Vector2(1.298072, 0.9264937)
texture = ExtResource("4_dow4h")

[node name="Cena1" type="Sprite2D" parent="."]
position = Vector2(573.5, 324.75)
scale = Vector2(1.2771785, 0.9372417)
texture = ExtResource("5_nw86o")

[node name="Button" type="Button" parent="."]
offset_left = 1040.0
offset_top = 18.0
offset_right = 1122.0
offset_bottom = 57.0
text = "Aperte P"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = 6.0
offset_top = 2.0
offset_right = 1158.0
offset_bottom = 650.0
stream = ExtResource("6_k2km7")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
